5gcore/mesh/site2/prod2-vs-mirror-details.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: details
  namespace: prod2-5gcore
spec:
  hosts:
    - details.prod2-5gcore.svc.cluster.local
  http:
    - mirror:
        host: details-v2.prod2-5gcore.svc.prod1-mesh-imports.local
      route:
        - destination:
            host: details.prod2-5gcore.svc.cluster.local
            subset: v1
          weight: 100
